# lab-snippets

./: .gitignore  .snippets_token.json  CHANGELOG.md  README.md  cat.py  example1_presentation.py  example3_rpc_client.py  flake.nix  gciatto.txt  pyproject.toml  rand.py  requirements.txt  token.json  token.txt  tokenDark.json  tokenDark1.json  tokens.json
.github/workflows/: check.yml  deploy.yml
snippets/: __init__.py  __main__.py  lab1-game-loop.py
snippets/lab1/: example1_game_loop.py  example2_game_object.py  example3_controller.py  example4_view.py  example5_game_loop_cleancode.py
snippets/lab2/: __init__.py  example1_udp_chat_wrong.py  example2_udp_chat.py  example3_udp_streamer.py  example4_udp_chat_graceful.py  example5_tcp_chat.py
snippets/lab3/: README.md  README.md.txt  README_TCP_Group_Chat.txt  ReadME.md  Readme.md  __init__.py  (+25 more)
test/: test_auth_admin.py  test_exercise_authentication.py  test_exercise_tcp_group_chat.py
testFiles/: test_authentication.py  test_secure_get_user.py  test_validate_token.py
tests/: simulation_1_desired.txt  tcp_group_chat_simulation_1.py  tcp_group_chat_simulation_2.py  test_auth_successful.py  test_auth_unsuccessful.py  test_authenticated_admin.py  test_authenticated_admin_get_user.py  test_authenticated_admin_gets_existing_user.py  test_authenticated_user.py  test_authenticated_user_get_user.py  test_base.py  test_token_is_invalid.py  test_token_is_valid.py  test_unauthenticated_admin.py  test_unauthenticated_admin_get_user.py
tokens/: token_expired.json  token_wrong.json
userTokens/: gciatto.json  jiahao.json
(+83 files in other folders)
