[tool.poetry]
name = "lab-snippets"
packages = [
    { include = "snippets" },
]
version = "2.1.8"
description = "Code snippets for the course 'Distributed Systems -- Module 2' at the University of Bologna"
authors = ["Giovanni Ciatto <giovanni.ciatto@unibo.it>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.9.0 < 4.0.0"

pygame = "^2.6.0"
psutil = "^6.0.0"
[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
mypy = "^1.10.1"
poethepoet = "^0.31.0"
poetry = "^1.8.3"
pytest = "^8.2.2"

[tool.poe.tasks]
# test = "python -m unittest discover -v -s tests -p '*.py'"
# coverage = "coverage run -m unittest discover -v -s tests -p '*.py'"
# coverage-report = "coverage report -m"
# coverage-html = "coverage html"
mypy = "mypy snippets"
compile = "python -m compileall snippets"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = false
